# gsoc-wasm-filters

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  NOTICE  README.md  go.mod  go.sum
.github/workflows/: audit.yaml  ci.yaml  clippy.yaml  format.yaml  license.yaml
benchmark/bench-high-traffic/: high-load.json.html  unique-mq-high.json.html
benchmark/bench-latency/: README.MD
benchmark/bench-latency/configs/: artillery.yaml  envoy-auth.yaml  envoy-cache.yaml  envoy.yaml
benchmark/bench-latency/reports/: scenario1.json  scenario1.json.html  scenario2.json  scenario2.json.html  scenario3.json  scenario3.json.html
benchmark/bench-unique-callouts/: BENCH-UNIQUE.md  README.md  cache-1.hdr.csv  cache-2.hdr.csv  cache-spike-1.csv  cache-spike-1.hdr.csv  cache-spike-2.csv  cache-spike-2.hdr.csv  cache-unique-mq-1.hdr.csv  cache-unique-mq-2.hdr.csv  cache-unique-mq-spike-1.csv  cache-unique-mq-spike-1.hdr.csv  cache-unique-mq-spike-2.csv  cache-unique-mq-spike-2.hdr.csv
benchmark/bench@8-8-2021/: artillery.yaml
benchmark/scenario-1/: envoy.yaml
cache-filter/: Cargo.toml
cache-filter/src/: configuration.rs  filter.rs  lib.rs  log.rs  rand.rs  unique_callout.rs  unique_callout_dummy.rs  utils.rs
cache-filter/src/configuration/: filter.rs
cache-filter/src/filter/: http.rs  root.rs
cache-filter/src/rand/: prng.rs  seeding.rs  thread_rng.rs
deployments/docker-compose/: Dockerfile  docker-compose.yaml  envoy.yaml
deployments/docker-compose/metrics/: Dockerfile  docker-compose.yaml  envoy.yaml  prometheus.yaml
docs/: CACHE.md  METRICS.md  SINGLETON.md
integration-tests/: Dockerfile  apisonator.go  app_id_test.go  cache_test.go  config_template.yaml  config_test.go  docker-compose.yaml  envoy.yaml  main.go  singleton_flush_test.go
integration-tests/configs/app-id/: Dockerfile  docker-compose.yaml  envoy.yaml
integration-tests/middleware/: Dockerfile  index.js  package.json
singleton-service/: Cargo.toml
singleton-service/src/: configuration.rs  deltas.rs  lib.rs  service.rs
singleton-service/src/configuration/: delta.rs  service.rs  test.rs
singleton-service/src/service/: auth.rs  deltas.rs  proxy.rs  report.rs
threescale/: Cargo.toml
threescale/src/: cache.rs  lib.rs  proxy.rs  stats.rs  structs.rs  upstream.rs  utils.rs
threescale/src/proxy/: cache.rs
threescale/src/upstream/: serde.rs
