[package]
name = "cache-filter"
version = "0.1.0"
authors = ["Rahul Anand <rahulanand16nov@gmail.com>", "Lahiru Udayanga <lahirudesilva.17@cse.mrt.ac.lk>"]
edition = "2018"
description = "This package contains all the cache filter related functionalities"
license = "Apache-2.0"
repository = "https://github.com/3scale-labs/gsoc-wasm-filters"
readme = "../README.md"
keywords = ["cache", "wasm", "threescale"]
categories = ["cache filter"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["prng_pcg32"]
visible_logs = []
prng_pcg32 = ["rand_pcg"]
prng_xoshiro128 = ["rand_xoshiro"]
prng_xorshift = ["rand_xorshift"]

[dependencies]
threescale = { path = "../threescale" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
serde-humanize-rs = "0.1"
proxy-wasm = "0.1"
bincode = "1.0"
threescalers = { git = "https://github.com/3scale-rs/threescalers", branch = "master" }
serde_xml = "0.9"
thiserror = "1.0"
url = { git = "https://github.com/3scale-rs/rust-url", branch = "3scale", features = ["serde"] }

rand = { version = "^0.8", default-features = false }
rand_seeder = { version = "^0.2" }
rand_jitter = { version = "^0.3" }
# PRNG implementation
rand_xoshiro = { version = "^0.6", optional = true }
rand_xorshift = { version = "^0.3", optional = true }
rand_pcg = { version = "^0.3", optional = true }